[tool.poetry]
name = "periodic-tasks"
version = "v0.6.11"
description = ""
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.9.15"}
python-decouple = "==3.8"
aiohttp = "==3.12.14"
sentry-sdk = "==2.19.2"
prometheus-client = "==0.21.1"
tomli = "==2.2.1"

[tool.poetry.group.dev.dependencies]
pylint = "==3.0.1"
mypy = "==1.6.1"
isort = "==5.12.0"
pre-commit = "==3.5.0"
Flake8-pyproject = "==1.2.3"
bandit = { version = "==1.8.6", extras = ["toml"] }
black = { version = "==23.10.0", extras = ["d"] }
flake8-print = "==5.0.0"
flake8-datetimez = "==20.10.0"
types-requests = "==2.31.0.20240311"
pytest = "==8.4.1"
pytest-asyncio = "==1.1.0"
faker = "^19.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["periodic_tasks/config/networks.py", "*/tests/*"]
skips = ["B608"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "R0801", "R0902", "R0903", "R0914", "W0511", "W0703"]
ignore-paths=["periodic_tasks/.*/tests/.*", "periodic_tasks/conftest.py"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "w3"]
extension-pkg-whitelist = "pydantic"
ignored-modules = ["starlette", "milagro_bls_binding"]

[tool.flake8]
extend-ignore = ["E203", "E501"]  # line length will be checked by pylint

[tool.mypy]
exclude = ["test"]
ignore_missing_imports = true
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = 'web3.*'
no_implicit_optional = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.vulture]
exclude = ["networks.py"]
ignore_names = [
    "default_account",  # execution client
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
